More card query work, merged database creation into databaseport

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,12 +7,14 @@ Minor:
 -Custom exception for database errors?
 -Comprehensive readme explaining project structure and plan
   -Identifier vs Info Container for value objects
+-SortedSets to Sets?
 
 Major:
 -P/t conditions for card?
 -Documentation
 -Redo connection, statement openings and closing (old style)
 -Card querying
+-Scryfall image url
 -Specify database creatsion
 -SQLexcpetion print stack trace to throw stack trace
 -Merging card and card expansions?
