--- a/TODO.txt
+++ b/TODO.txt
@@ -1,17 +1,19 @@
 Minor:
 -Documentation
--Write down how time handling is done
+-Split multiple artists
+-Write down how time handling is done (timestamp in database)
 -Update text on cards option (erreta)
 -Add release dates to expansions
 -Comprehensive readme explaining project structure and plan
   -Identifier vs Info Container for value objects
 
 CardQuerying
--First vs last insertions
--Rejoining table
+-Block Query
+-Testing
+-Refactoring
+-More testing
 
 Major:
--Card querying
 -Optional color / color indicator
 -Scryfall image url
 -Documentation
