Finished all basic card construction methods

--- a/TODO.txt
+++ b/TODO.txt
@@ -11,6 +11,7 @@ Minor:
 
 Major:
 -CardQuery refactoring
+-Give shortcut names for card query
 -Card retrieval implementation
 -Documentation
 -Optional / "one of" arguments
