finished inital version of building Card, added inital list of to do tests

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 Minor:
 -Documentation
 -Add Scryfall image url
+-CardPrinting equality double check
 -Split multiple artists
 -Write down how time handling is done (timestamp in database)
 -Update text on cards option (erreta)
@@ -10,6 +11,7 @@ Minor:
   -Identifier vs Info Container for value objects
 
 Major:
+-Comparison testing
 -CardQuery refactoring
 -Give shortcut names for card query
 -Card retrieval implementation
