--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,6 @@
 Minor:
 -Documentation
 -Add Scryfall image url
--Promo bugs
 -CardPrinting equality double check
 -Split multiple artists (fix tests)
 -Write down how time handling is done (timestamp in database)
@@ -12,7 +11,7 @@ Minor:
   -Identifier vs Info Container for value objects
 
 Major:
--Comparison testing
+-Comparison testing, add card expansions to card expansions
 -CardQuery refactoring
 -Give shortcut names for card query
 -Card retrieval implementation
