--- a/TODO.txt
+++ b/TODO.txt
@@ -1,27 +1,18 @@
 Minor:
--Documentation
 -Add Scryfall image url
--Double up single quotes for SQL
+-Hashcode equality
 -Split multiple artists (fix tests)
 -Write down how time handling is done (timestamp in database)
 -Update text on cards option (erreta)
 -Add release dates to expansions
 -Comprehensive readme explaining project structure and plan
--Retrieval tests
-  -Identifier vs Info Container for value objects
+-Identifier vs Info Container for value objects
 
 Major:
--Card expansion bug - redo card query and tests
+-Documentation, refactoring, additional testing
+-Deck and deck instance testing
 -Add name, expansions, and name-expansion checks to DefaultCard constructor
--Documentation
-More card query tests
--Set to sorted set when appropriate
--Card retrieval testing
--CardQuery refactoring
--Give shortcut names for card query
--Card retrieval implementation
 -Optional / "one of" arguments
--Card retrieval tests
 -Optional color / color indicator
 -Redo connection, statement openings and closing (old style)
 -Terminal thing
