--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,7 @@
 -Finish card query tests
 -Mock deck for testing into separate class
--Make informative deck instance an extension of deck instance
 -Equality for deck instances and informative deck instances
--Interface equals, hashcode, and compare documentation
+-How to do errors in controller
 -More testing - card retrieval, informative deck instances
 -Documentation clean up and adding
 
