--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,3 @@
--Move search options to card query from database
 -Finish card query tests
 -Mock deck for testing into separate class
 -Equality for deck instances and informative deck instances
@@ -16,6 +15,9 @@
 -Documentation updates
 -Write down how time handling is done (timestamp in database)
 -Comprehensive readme explaining project structure and plan and how to use
+
+View
+-Separate card display and card query info submit entry
 
 Tests
 -Deck equality tests
